--- a/assets/scss/layouts/_newsletter.scss
+++ b/assets/scss/layouts/_newsletter.scss
@@ -18,18 +18,19 @@
     .newsletter-banner-headline { color: #fff; }
     .newsletter-banner-sub      { color: rgba(#fff, 0.5); }
 
-    .nbf-fields { border-color: rgba(#fff, 0.25); }
+    .nbf-fields { border-color: rgba(#fff, 0.3); }
     .nbf-input  {
+      background: rgba(#000, 0.45);
       color: #fff;
-      border-right-color: rgba(#fff, 0.25);
-      &::placeholder { color: rgba(#fff, 0.35); }
+      border-right-color: rgba(#fff, 0.2);
+      &::placeholder { color: rgba(#fff, 0.65); }
     }
     .nbf-btn {
       background: #fff;
       color: $charcoal;
       &:hover { background: #e0ddd8; }
     }
-    .nbf-msg { color: rgba(#fff, 0.45); }
+    .nbf-msg { color: rgba(#fff, 0.6); }
   }
 }
 
